# git

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  skirk
.cache/clangd/index/: bridge.cpp.888248413192197A.idx  bridge.hpp.E5D55A67AE7500BC.idx  cat-file.cpp.7EADFBD916A80904.idx  cat-file.hpp.7B2A6CCDD02B0A82.idx  checkout.cpp.BF424659BB1F377C.idx  fileProd.cpp.3376990BAB624961.idx  fileProd.hpp.CA716B0605F6CD6B.idx  hash-file.cpp.9E4B424D145311F8.idx  hash-file.hpp.1D93FE7E024857A2.idx  init.cpp.89019F204E539295.idx  init.hpp.6452C3C7FFBF01DC.idx  ls-tree.cpp.DF64CB763F34AFE0.idx  ls-tree.hpp.58CF27E404D709A1.idx  main.cpp.308E368511620327.idx  objectClasses.cpp.FF029E85F1BAD0DD.idx  objectClasses.hpp.B5C6D1D502B3B2DA.idx  refWorker.hpp.D456ACB51880605B.idx  refWorkers.cpp.0CF51A7956F50F28.idx  sha1.hpp.623F493A0C862B40.idx  show-ref.cpp.133E0A2F42A2DF91.idx  show-ref.hpp.BA73FF003916E951.idx  tag.cpp.A496AD9BA1F3181B.idx  tag.hpp.F515D1C9DBD3DE11.idx
src/: main  main.cpp
src/cli/: bridge.cpp  bridge.hpp
src/commands/: cat-file.cpp  cat-file.hpp  checkout.cpp  checkout.hpp  hash-file.cpp  hash-file.hpp  init.cpp  init.hpp  ls-tree.cpp  ls-tree.hpp  show-ref.cpp  show-ref.hpp  tag.cpp  tag.hpp
src/utils/: fileProd.cpp  fileProd.hpp  index.cpp  index.hpp  objectClasses.cpp  objectClasses.hpp  refWorker.hpp  refWorkers.cpp  sha1.hpp
tests/: e2e_commit.sh
